--- a/ivy.xml
+++ b/ivy.xml
@@ -40,5 +40,9 @@
 		<!-- Compiler for custom widget sets. Should not be deployed -->
 		<dependency org="com.vaadin" name="vaadin-client-compiler"
 			rev="&vaadin.version;" conf="widgetset-compile->default" />
+			
+		<!-- Java Sass compiler -->
+        <dependency org="com.vaadin" name="vaadin-sass-compiler"
+            rev="0.9.1" />
 	</dependencies>
 </ivy-module>
